<resources>
    <string name="app_name"> Dr.SPARE </string>
    <string name="SignInButtonText">Sign In</string>
    <string name="Register">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">UserId</string>
    <string name="email2">Email</string>
    <string name="phone">Mobile No.</string>
    <string name="username">UserName</string>
    <string name="title_activity_login">Sign in</string>
    <string name="password2">Conform Password</string>
    <string name="action_settings">Settings</string>
    <string name="imagecompressor">Image Compressor</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_nav">NavActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
</resources>
